# music-playlist-online-sync

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  log_analysis.ipynb  music-file-playlist-online-sync.install  music-playlist-online-sync.git
.github/: labels.yml
.github/workflows/: ci.yml
config/: example-config.toml
db/: schema.sql
docs/: INSTALL.md  ISSUE_BOARD.md
etc/music-sync/: config  config.toml
etc/systemd/system/: music-sync-worker.timer
packaging/: .SRCINFO
scripts/: aur-push.sh  dev.sh  install.sh  package.sh
src/: collapse.rs  config.rs  db.rs  lib.rs  models.rs  playlist.rs  retry.rs  troubleshoot.rs  util.rs  watcher.rs  worker.rs
src/api/: mock.rs  mod.rs  pkce.rs  spotify.rs  spotify_auth.rs  tidal.rs  tidal_auth.rs
systemd/: music-file-playlist-online-sync-reconcile.service  music-file-playlist-online-sync-reconcile.timer  music-file-playlist-online-sync-watcher.service  music-file-playlist-online-sync-worker.service  music-file-playlist-online-sync-worker.timer
tests/: collapse_tests.rs  config_and_db_tests.rs  db_cache_tests.rs  integration_nightly.rs  locks_and_provider_tests.rs  playlist_tests.rs  provider_mockito_example.rs  provider_spotify_mock_tests.rs  provider_trait_tests.rs  refactor_tests.rs  search_lookup_negative.rs  spotify_rate_limit.rs  spotify_token_refresh_failure.rs  tidal_provider_tests.rs  token_refresh.rs  watcher_integration.rs  watcher_unit_tests.rs  worker_event_propagation.rs  worker_multi_provider.rs  worker_provider_selection.rs
