
[package]
name = "music-file-playlist-online-sync"
version = "0.2.0"
edition = "2021"
authors = ["Roman and contributors"]
description = "Music folder -> remote playlist sync (prototype)."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.30", features = ["macros", "rt-multi-thread", "time"] }
notify = "6.1"
rusqlite = { version = "0.29", features = ["bundled"] }
dirs = "4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
tracing-appender = "0.2"
tracing-log = "0.1"
walkdir = "2.3"
once_cell = "1.20"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
async-trait = "0.1"
urlencoding = "2.1"

pathdiff = "0.2"
log = "0.4"
lofty = "0.22"
regex = "1.10"

[dev-dependencies]
tempfile = "3.5"
mockito = "1.1"